// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form>
  <ul
    className="form-style-1"
  >
    <h1>
       Login 
    </h1>
    <li>
      <label>
        Username 
        <span
          className="required"
        >
          *
        </span>
      </label>
      <input
        className="field-long"
        onChange={[Function]}
        type="name"
      />
      <label>
        Password 
        <span
          className="required"
        >
          *
        </span>
      </label>
      <input
        className="field-long"
        onChange={[Function]}
        type="password"
      />
    </li>
    <li />
    <li>
      <input
        onClick={[Function]}
        type="button"
        value="Submit"
      />
    </li>
  </ul>
</form>
`;

exports[`renders correctly 2`] = `
<div>
  <p>
     Admin page 
  </p>
  <p>
     Server state is RUNNING 
  </p>
  <p>
     Server is running on port 3001 
  </p>
</div>
`;

exports[`renders correctly 3`] = `null`;

exports[`renders correctly 4`] = `
<div>
  <p>
    Please note that we will be performing important server maintenance in a few minutes, during which time the server will be unavailable for approximately 5-10 minutes.
  </p>
  <p>
    If you are in the middle of something important, please save your work or hold off on any critical actions until we are finished. 
  </p>
  <input
    onClick={[Function]}
    type="button"
    value="Stop maintenance"
  />
</div>
`;

exports[`renders correctly 5`] = `
<div>
  <p>
     Serverul este oprit 
  </p>
  <input
    onClick={[Function]}
    type="button"
    value="Start server"
  />
</div>
`;
